docs: copyedit basic/1 and intro/1-7 for clarity and concision
Apply Strunk's Elements of Style rules: active voice, positive form,
concrete language, and omit needless words. Fix "Micahel" typo in
basic/1, remove filler phrases across intro lessons, and tighten
navigation instructions.

--- a/content/basic/1.md
+++ b/content/basic/1.md
@@ -12,17 +12,13 @@ courseName = "Basic"
 The examples in this section will not function correctly unless you have [added the schema](/intro/2) and [loaded the example data](/intro/3) in the DQL Introduction. 
 {{% /notice %}}
 
-Let’s have a look at a basic query in DQL, like the one on the right. 
+The query on the right is a basic DQL query.
 
-Every query has a name, in this case `find_michael`,  and when run, it's result is labeled with the same name.
+Every query has a name. Here the name is `find_michael`, and the result carries the same label.
 
-The search criteria `func: ...` matches nodes. Function `eq` does what you'd
-expect, matching nodes with a `name` equalling "Michael". The result is the
-matched nodes and listed outgoing edges from those nodes.
+The search criterion `func: ...` matches nodes. The function `eq` matches nodes whose `name` equals "Michael". The result lists the matched nodes and their outgoing edges.
 
-Dgraph identifies each node with a unique internal id, its UID. A UID is not an
-edge, but can it be returned in a query with `uid`. If you already know a node's
-UID, it can be retrieved with `func: uid(<uid-number>)`.
+Dgraph assigns each node a unique internal identifier called a UID. You can return it in a query with `uid`, and you can retrieve a node directly with `func: uid(<uid-number>)`.
 
 Run the query now, and examine the result.
 
@@ -41,11 +37,10 @@ First run the original `find_michael` query and note the `uid` in the response.
 }
 ```
 
-Then modify the query to use the `uid` function as follows, replacing the ```UID_HERE```
-in the unquoted `uid` value.
+Then modify the query to use the `uid` function as follows, replacing `UID_HERE`
+with the unquoted `uid` value.
 
-The `uid` for Micahel will begin with `0x` and be 18 characters long (`0xfffd8d67d98b46fc` for example) and is unique to your 
-local Dgraph instance. 
+Michael's `uid` begins with `0x` and is 18 characters long (for example, `0xfffd8d67d98b46fc`). Each local Dgraph instance assigns its own UIDs.
 
 ```
 
@@ -60,10 +55,8 @@ local Dgraph instance.
 
 
 
-You can edit the queries and try whatever you like. When there are answers like
-this, cut and paste them into the query panel, then edit and run them.
+You can edit the queries and try whatever you like. Copy any answer into the query panel, edit it, and run it.
 {{% /expandable %}}
 
 
-This tutorial handles running of the query for you, so you can just focus on the
-query text.  But if you want to learn more about how it does so, check out [posting queries](https://docs.dgraph.io/dgraph-overview/) or [programming with Dgraph](https://docs.dgraph.io/clients/).
+This tutorial runs the query for you, so you can focus on the query text. To learn more about sending queries directly, see [posting queries](https://docs.dgraph.io/dgraph-overview/) or [programming with Dgraph](https://docs.dgraph.io/clients/).
