--- a/content/intro/1.md
+++ b/content/intro/1.md
@@ -8,8 +8,6 @@ course = 1
 courseName = "Introduction"
 +++
 
-Hi,
-
 Welcome to [Dgraph](https://docs.dgraph.io/).
 
 <!---
@@ -19,23 +17,11 @@ Before using Dgraph in your own projects, you’ll need to know about
 graph databases and how to query Dgraph.
 -->
 
-This interactive tutorial will get you up and running with Dgraph and writing
-graph queries in Dgraph Query Language [DQL](https://docs.dgraph.io/dql/).
+This tutorial teaches you to write graph queries in Dgraph Query Language ([DQL](https://docs.dgraph.io/dql/)).
 
 
-The tutorial is divided into modules. You can access the table of contents at
-any time by clicking on the context menu ("sandwich" icon) in the bottom left corner
-of the screen; you can also navigate using the **Back** and **Next** buttons
-at the bottom of this pane, or by pressing your keyboard's
-**Left Arrow** (&#8592;) and **Right Arrow** (&#8594;) keys.
+Navigate between lessons with the **Back** and **Next** buttons, or with the **Left Arrow** (&#8592;) and **Right Arrow** (&#8594;) keys. Open the table of contents at any time from the menu icon in the bottom-left corner.
 
-In this tutorial, you can run and edit the queries and interact with the
-visualizations.
+For additional detail, see the [reference documentation](https://docs.dgraph.io/).
 
-The tutorial will guide you from your first graph query to queries a graph
-expert would be proud of.
-
-As well as this self contained tutorial, there’s lots of
-[reference material](https://docs.dgraph.io/) to help you use Dgraph.
-
-When you are ready to begin click **Next**.
+When you are ready to begin, click **Next**.
