--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -9,12 +9,12 @@ courseName = "Introduction"
 endpoint = "/mutate"
 +++
 
-Now that a schema has been loaded, it's time to load some data. 
+With the schema in place, load some data.
 
 Press the **run** button again and check that the response panel indicates the data was
 loaded successfully.
 
-Don't worry about the syntax for now, it will be explained later.
+Later lessons explain the syntax in detail.
 
 {{% notice "note" %}}
 **Only run this mutation once.** Blank nodes like `_:michael` are temporary
@@ -153,6 +153,6 @@ The following is same mutation as on the right expressed in JSON format:
 ```
 
 
-{{% notice "tip" %}} Comparing JSON example to the RDF may help you better understand the syntax of both. {{% /notice %}}
+{{% notice "tip" %}} Compare the JSON example above with the RDF on the right to better understand the more terse RDF. {{% /notice %}}
 
-We'll go into more detail about both next.    
+The next lesson breaks down the RDF and JSON mutation syntax.
