--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -10,15 +10,14 @@ iFrameRatel = 1
 
 +++
 
-We've started Dgraph, but first things first: What is a graph and what has that
-got to do with databases?
+Dgraph is running. Before we query it, we need to answer two questions: What is
+a graph, and why use one as a database?
 
-Graphs describe objects and the interconnections among them. Many people have
-heard of friendship graphs, or social network graphs, so let’s start there.
+Friendship graphs and social network graphs offer the clearest introduction.
 
-We have loaded [Ratel UI](http://localhost:8000) in an iFrame for this lesson
-and have had it run a query that finds Michael and traverses his friendships,
-their pets, and their friends' connections.
+[Ratel UI](http://localhost:8000) is loaded in an iFrame for this lesson. It
+runs a query that finds Michael and traverses his friendships, their pets, and
+their friends' connections.
 
 In the resulting graph, circles denote people and pets, and lines denote
 connections or labeled relationships among them.
@@ -34,13 +33,13 @@ Rammy the sheep is the pink circle directly connected to Michael.
 
 <!---The graph could be represented as a picture, written down as text or stored in a graph database. -->
 
-Graphs lend themselves so naturally to visualization that you’ll find yourself
-thinking in terms of graphs and visualizations of them.
+Graphs lend themselves to visualization: once you see one, you begin to
+recognize graph structures everywhere.
 
 In a graph, the objects (or entities) are called ***nodes*** and the relationships are
 called ***edges*** or ***predicates***.
 
-Graphs aren't just for social networks. Other examples include
+Graphs apply far beyond social networks. Other examples include
 
 - Interconnected data, like SQL tables requiring joins
 - Advanced search
@@ -51,4 +50,4 @@ Graphs aren't just for social networks. Other examples include
 - Events and the causality or other links between them
 - Structures of firms or markets
 
-These and the many more applications of graphs lead us to graph databases.
+Applications like these call for graph databases.
