--- a/content/intro/6.md
+++ b/content/intro/6.md
@@ -11,16 +11,13 @@ courseName = "Introduction"
 A graph database is a database optimized for storing and querying graphs. When
 it comes to relationships, graph databases are much faster than SQL databases.
 
-SQL databases get bogged down by graph-like data because following edges means
-joining tables; sometimes big tables; the more edges, the more joins, and the
-more data needs to be loaded and processed.
+SQL databases struggle with graph-like data because following edges means joining
+tables. As edges multiply, so do joins, and each join forces the database to
+load and process more data.
 
-In a graph database, the edges are a fundamental structure, so following edges
-is a single lookup, making this operation blazingly fast.
+In a graph database, edges are a fundamental structure, so following an edge is a
+single lookup -- fast regardless of the dataset's size.
 
-**Dgraph is a graph database.** It’s optimized to store graph data and to query
-it fast. More than that, it’s designed to scale to huge graphs across many
-machines.
-
-With Dgraph, you can store a graph on a single computer with millions of edges,
-or you can store massive graphs that require a whole data center to process.
+**Dgraph is a graph database.** It stores and queries graph data efficiently, and
+it scales from millions of edges on a single machine to massive graphs spread
+across a data center.
