--- a/content/intro/7.md
+++ b/content/intro/7.md
@@ -11,7 +11,6 @@ completed = 1
 
 **Congratulations,** you've finished the first module of the tutorial.
 
-By now you should have Dgraph up and running for the tutorial and know a little
-about graphs.
+You have Dgraph up and running and a grounding in graph concepts.
 
-Let’s investigate some graphs and start writing queries.
+Let's query some graphs.
