--- a/content/intro/2.md
+++ b/content/intro/2.md
@@ -9,11 +9,6 @@ courseName = "Introduction"
 endpoint = "/alter"
 +++
 
-Once you have Dgraph up and running, press **run** on the panel to the right.
-This will load a schema into Dgraph for us to use in the first steps of the
-tutorial. Don't worry too much about the syntax for now, we'll cover all that in
-later lessons, just check in the response panel that the operation was a
-success.
+Press **run** on the panel to the right. This loads a schema that the first lessons require. Later lessons explain the syntax in detail; for now, confirm in the response panel that the operation succeeded.
 
-{{% notice "note" %}} Note that Schema changes are made via Alter operations
-only. All clients have an operation for Mutate, Query and Alter. {{% /notice %}}
+{{% notice "note" %}} Schema changes require Alter operations. All clients provide Mutate, Query, and Alter operations. {{% /notice %}}
