docs: soften tip wording in intro/3

--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -153,6 +153,6 @@ The following is same mutation as on the right expressed in JSON format:
 ```
 
 
-{{% notice "tip" %}} Compare the JSON example above with the RDF on the right to better understand the more terse RDF. {{% /notice %}}
+{{% notice "tip" %}} Comparing the JSON above with the RDF on the right may help you better understand the more terse RDF format. {{% /notice %}}
 
 The next lesson breaks down the RDF and JSON mutation syntax.
