--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -10,16 +10,18 @@ iFrameRatel = 1
 
 +++
 
-Dgraph is running. Before we query it, we need to answer two questions: What is
-a graph, and why use one as a database?
+Dgraph is running and the data is loaded.  
 
-Friendship graphs and social network graphs offer the clearest introduction.
+Before we query it, we need to answer two questions: What is a graph, and why use one as a database?
 
-[Ratel UI](http://localhost:8000) is loaded in an iFrame for this lesson. It
-runs a query that finds Michael and traverses his friendships, their pets, and
+Friendship graphs and social network graphs offer a good introduction.
+
+The [Ratel UI](http://localhost:8000) is loaded in in the right panel for this lesson. 
+
+In it we've run a query that finds Michael and traverses his friendships, their pets, and
 their friends' connections.
 
-In the resulting graph, circles denote people and pets, and lines denote
+In the resulting graph shown, circles denote people and pets, and lines denote
 connections or labeled relationships among them.
 
 **Can you find Michael and his pet sheep Rammy on the graph?** 
@@ -39,15 +41,15 @@ recognize graph structures everywhere.
 In a graph, the objects (or entities) are called ***nodes*** and the relationships are
 called ***edges*** or ***predicates***.
 
-Graphs apply far beyond social networks. Other examples include
+Graphs databases have many more uses than simply representing social networks. For example: 
 
-- Interconnected data, like SQL tables requiring joins
-- Advanced search
+- Interconnected data that in a SQL RDBMS would require many joins to use effectively. 
+- Advanced searching
 - Recommendation engines
 - Pattern detection
-- Networks, like computers, roads, and telecommunications
-- Processes, like business and biological processes
-- Events and the causality or other links between them
+- Networks like computers, roads, and telecommunications
+- Business and biological processes
+- Temporal events and causality relationships between them, as any well as any other type of linkage they share.  
 - Structures of firms or markets
 
 Applications like these call for graph databases.
