docs: copyedit schema/1-10 for clarity, rename work_here to works_here
Apply Strunk's Elements of Style rules across all schema lessons.
Rewrite reverse-edge explanation with concrete manual vs @reverse
comparison. Replace schema/7 curl-based exercise with upsert block
that queries and mutates in a single atomic request. Fix garbled
prose, bare URLs, stale version notes, and passive voice throughout.

--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -49,7 +49,7 @@ Graphs databases have many more uses than simply representing social networks. F
 - Pattern detection
 - Networks like computers, roads, and telecommunications
 - Business and biological processes
-- Temporal events and causality relationships between them, as any well as any other type of linkage they share.  
+- Temporal events and the causal links between them
 - Structures of firms or markets
 
 Applications like these call for graph databases.
