--- a/content/schema/1.md
+++ b/content/schema/1.md
@@ -9,23 +9,19 @@ courseName = "Schema"
 endpoint = "/alter"
 +++
 
-As we saw in an [earlier lesson](../../basic/3/), Dgraph stores a schema
-describing the types of predicates.
+An [earlier lesson](../../basic/3/) showed that Dgraph stores a schema describing
+each predicate's type.
 
-When we want to add new data to an existing schema, we can just add it. But if
-we want to add new data in a new schema we have two choices
+Adding data to an existing schema requires no extra steps. Adding data under a
+new schema offers two choices:
 
-- Add the data and let Dgraph work out the schema, or
-- Specify a schema and then add the data
+- Add the data and let Dgraph infer the schema, or
+- Define the schema first, then add the data
 
-Dgraph can work out the schema just fine. Functions at query root can only be
-applied to indexed predicates and for that we need to specify the schema.
-Comparison functions at the query root level (aka `func:`) can only be applied
-on indexed predicates, which are added by annotating the predicate definition on
-the schema. Since v1.2, comparison functions can now be used on `@filter`
-directives even on predicates that have not been indexed.
+Root query functions (`func:`) work only on indexed predicates, so you must
+define the schema and declare indexes before you can filter at the query root.
+Comparison functions inside `@filter` directives, however, work on predicates
+even without indexes.
 
-Alter schema to define data types and to add indexes.
-
-Run to alter schema. The index allows applying filter functions, such as
-searching for all companies that participate in a particular industry.
+Run this mutation to define data types and add indexes. The `term` index on
+`industry`, for example, lets you filter for every company in a given industry.
