--- a/content/schema/10.md
+++ b/content/schema/10.md
@@ -9,11 +9,11 @@ courseName = "Schema"
 completed = 1
 +++
 
-This is the end of the schema module.
+This concludes the schema module.
 
-The Dgraph instance you have running for the tutorial and the lessons in the
-modules so far give you a sandbox to play in. Make whatever queries or changes
-you like until you are comfortable with the material covered so far.
+Your local Dgraph instance and the lessons so far give you a sandbox for
+experimentation. Run queries, add data, and modify the schema until the
+material feels solid.
 
-When you're done, let's move up to bigger datasets and see more of Dgraph's
-query language.
+When you are ready, continue to the next module to work with larger datasets
+and explore more of Dgraph's query language.
