--- a/content/schema/2.md
+++ b/content/schema/2.md
@@ -9,23 +9,23 @@ courseName = "Schema"
 endpoint = "/mutate"
 +++
 
-Now that the schema has been updated we can add data as triples.
+With the schema in place, you can add data as triples.
 
-Dgraph creates its own internal id’s for nodes, but we need some way to refer to
-the same node many times in our input data. That’s what `_:company1` does.
+Dgraph assigns its own internal IDs to nodes, but you need a way to reference
+the same node more than once in your input data. The label `_:company1` serves
+this purpose.
 
-Technically, these are ‘blank nodes’. They tell Dgraph to create a node, give it
-an internal id and make sure it’s used consistently.
+These labels are "blank nodes." Each one tells Dgraph to create a node, assign
+it an internal ID, and reuse that ID wherever the same label appears.
 
-After the upload, the label `_:company1` doesn’t exist in Dgraph and we can’t
-query for it. You’ll see in the result that Dgraph has replaced it with an
-internal id. You can query for this internal id --- remember
-`func: uid(<uid_number>)`.
+After the mutation, the label `_:company1` no longer exists in Dgraph. The
+result shows the internal ID that Dgraph assigned in its place. You can query
+for that ID directly --- remember `func: uid(<uid_number>)`.
 
-Making changes to the graph stored in Dgraph is called mutating the data.
+Changing the graph stored in Dgraph is called "mutating" the data.
 
-You can load the same example data using JSON format. You're able to do that
-through our clients, cURL or Ratel UI.
+You can also load this example data in JSON format via the clients, cURL, or
+Ratel UI.
 
 See the JSON: {{% expandable %}}
 
@@ -82,5 +82,5 @@ See the JSON: {{% expandable %}}
 
 {{% /expandable %}}
 
-{{% notice tip %}} The JSON example may end up helping you better understand the
-format in RDF. {{% /notice %}}
+{{% notice tip %}} Comparing the JSON to the RDF above clarifies both
+formats. {{% /notice %}}
