--- a/content/schema/3.md
+++ b/content/schema/3.md
@@ -8,9 +8,8 @@ course = 3
 courseName = "Schema"
 +++
 
-Dgraph doesn't support setting external IDs for nodes. If an application
-requires unique identifiers for nodes other than the UIDs assigned by Dgraph,
-then these have to be supplied as edges. It's up to a user application to ensure
-the uniqueness of such IDs/keys.
+Dgraph assigns every node an internal UID. To give nodes your own external
+identifiers, store each identifier as a predicate (edge) on the node. Your
+application must enforce the uniqueness of these identifiers.
 
-More about in https://docs.dgraph.io/dql/upserts/#external-ids
+For details, see the [Upserts documentation on external IDs](https://docs.dgraph.io/dql/upserts/#external-ids).
