--- a/content/schema/4.md
+++ b/content/schema/4.md
@@ -8,17 +8,16 @@ course = 3
 courseName = "Schema"
 +++
 
-Language tags are used on the string on input
+Attach a language tag to a string value in the mutation:
 
 ```
 _:myID <an_edge> "something"@en .
 _:myID <an_edge> "某物"@zh-Hans .
 ```
 
-and on the [edge in a query]({{< relref "basic/4" >}}).
+Then request a specific language on the [edge in a query]({{< relref "basic/4" >}}).
 
-You can do the same example using JSON format. You're able to do that through
-our clients, cURL or Ratel UI.
+You can express the same mutation in JSON via the clients, cURL, or Ratel UI.
 
 See the JSON:
 
@@ -34,5 +33,5 @@ See the JSON:
     }
 ```
 
-{{% notice tip %}} The JSON example may end up helping you better understand the
-format in RDF. {{% /notice %}}
+{{% notice tip %}} Comparing the JSON to the RDF above clarifies both
+formats. {{% /notice %}}
