--- a/content/schema/5.md
+++ b/content/schema/5.md
@@ -9,18 +9,27 @@ courseName = "Schema"
 endpoint = "/alter"
 +++
 
-Edges are directional. A query can't traverse an edge in reverse.
+Edges are directional. A query can only follow an edge in the direction it was
+created.
 
-There are two choices to query in both directions
+Two approaches let you query in both directions:
 
-- Add the reverse edge to the schema and add all the reverse edge data.
+- **Define a separate reverse predicate and maintain it yourself.** Create a
+  distinct predicate for the opposite direction (e.g., `employed_by` as the
+  reverse of `works_for`). Every time you add `<person> <works_for> <company>`,
+  you must also add `<company> <employed_by> <person>`. This gives you full
+  control over naming and selective reversal, but demands discipline -- if you
+  forget to add the reverse triple, the data becomes inconsistent.
 
-- Tell Dgraph to always store the reverse edge using the `@reverse` keyword in
-  the schema.
+- **Mark the predicate with `@reverse` and let Dgraph handle it.** Dgraph
+  automatically creates and maintains the reverse edge for every triple on that
+  predicate. You query the reverse with the `~` prefix: the reverse of
+  `an_edge` is `~an_edge`.
 
-Run the schema mutation and Dgraph will compute all the reverse edges. The
-reverse edge of `an_edge` is `~an_edge`.
+Run this schema mutation to add `@reverse` to `boss_of` and `works_for`. Dgraph
+will compute all reverse edges immediately.
 
-In terms of data modeling, some reverse edges always make sense, such as
-`friend`. Others, such as `boss_of`, are sometimes, but not always
-bidirectional.
+Some predicates, such as `friend`, are inherently bidirectional and always
+benefit from a reverse edge. Others, such as `boss_of`, point in only one
+direction by design -- add a reverse edge only when the query pattern requires
+it.
