--- a/content/schema/6.md
+++ b/content/schema/6.md
@@ -10,6 +10,7 @@ courseName = "Schema"
 
 The reverse edge of `anEdge` is `~anEdge`.
 
-In this query we want to know who works for "CompanyABC" without having to add
-extra edges. So we use a reverse edge for the specific case. And then we use an
-alias "work_here" to differentiate the query result.
+The query below finds everyone who works for "CompanyABC" by traversing
+`works_for` in reverse (`~works_for`) instead of adding a separate edge from
+company to person. The alias `works_here` labels the result so the output reads
+clearly.
