--- a/content/schema/9.md
+++ b/content/schema/9.md
@@ -8,23 +8,22 @@ course = 3
 courseName = "Schema"
 +++
 
-`expand(...predicates...)` is used to query for all given predicates, rather
-than listing them in the query. Querying
+`expand(...predicates...)` queries all specified predicates at once, so you do
+not have to list each one individually. For example:
 
 ```
 expand(_all_)
 ```
 
-queries returns all edges out of every node matched at that level in the query.
-Expand can be nested to then expand all predicates at the next level.
+returns every edge on every node matched at that level. You can nest `expand`
+to retrieve all predicates at the next level as well.
 
-We'll see later how to use expand with variables to query for a particular set
-of edges.
+The [Query blocks and variables](/blocksvars/1) section shows how to combine
+`expand` with variables to query a specific set of edges.
 
-{{% notice "note" %}} As of version v1.1 you will need to add Types in your
-schema for `expand(_all_)` to work. See more in
-[Type System](https://docs.dgraph.io/dql/dql-schema/#node-types).
-{{% /notice %}}
+{{% notice "note" %}} Each node must have a
+[Type](https://docs.dgraph.io/dql/dql-schema/#node-types) defined in the
+schema for `expand(_all_)` to work. {{% /notice %}}
 
-You can also use your Types e.g `expand(Card, Document)` as arguments to
-`expand()`.
+You can also pass specific types as arguments, for example
+`expand(Card, Document)`.
