--- a/content/schema/8.md
+++ b/content/schema/8.md
@@ -9,7 +9,7 @@ courseName = "Schema"
 endpoint = "/mutate"
 +++
 
-There are three deletion options inside a delete mutation.
+A delete mutation supports three patterns:
 
 - `<uid> <edge> <uid>/"value" .` Delete a single triple (S P O)
 - `<uid> <edge> * .` Delete all values for a given predicate (S P *)
@@ -21,12 +21,11 @@ The `S * *` pattern only deletes predicates that are defined in the node's
 [DQL Mutation docs](https://docs.dgraph.io/dql/dql-mutation/) for details.
 {{% /notice %}}
 
-The examples given here are not complete. UIDs assigned on your instance would
-be unique. Try something out; you're not going to hurt anyone, just delete their
-friends.
+The examples below use placeholder UIDs. Replace them with UIDs from your own
+instance, then experiment freely.
 
-You can do the same example using JSON format. You're able to do that through
-our clients, cURL or Ratel UI.
+You can express the same deletions in JSON format through the client libraries,
+cURL, or Ratel UI.
 
 #### See in JSON:
 
@@ -55,8 +54,8 @@ Delete all triples for a given edge
 }
 ```
 
-This doesn't delete their children which means in this case, it will not erase
-the "friends". Only the relation would be deleted.
+This deletes the edge between the two nodes but leaves the child node (the
+"friend") intact.
 
 Deleting relations and then their children
 
@@ -76,5 +75,5 @@ Deleting relations and then their children
 }
 ```
 
-{{% notice tip %}} The JSON example may end up helping you better understand the
-format in RDF. {{% /notice %}}
+{{% notice tip %}} Comparing the JSON examples with the RDF patterns above
+clarifies how each format expresses the same operation. {{% /notice %}}
