docs: add Michael works_for edge to schema/7 upsert, add delete challenge to schema/8
Expand the schema/7 upsert block to also link Michael to CompanyABC.
Add a challenge to schema/8 that asks the user to write an atomic
upsert delete removing Michael from the company and as Sarah's boss.

--- a/content/schema/7.md
+++ b/content/schema/7.md
@@ -22,8 +22,8 @@ looks up each node by name and binds its `uid` to a variable. The `mutation`
 section references those variables with `uid(variable_name)` to create the new
 edges.
 
-Run the upsert on the right to make Michael the boss of Sarah and assign Sarah
-to CompanyABC — all in one atomic operation.
+Run the upsert on the right to make Michael the boss of Sarah and assign both
+Michael and Sarah to CompanyABC — all in one atomic operation.
 
 For more on upsert blocks, see the
 [Upserts documentation](https://docs.dgraph.io/dql/upserts/).
