--- a/content/schema/8.md
+++ b/content/schema/8.md
@@ -77,3 +77,40 @@ Deleting relations and then their children
 
 {{% notice tip %}} Comparing the JSON examples with the RDF patterns above
 clarifies how each format expresses the same operation. {{% /notice %}}
+
+#### Challenge:
+
+Michael has left CompanyABC. Using the upsert block pattern from the
+[previous lesson](/schema/7), write a single atomic operation that removes
+Michael's `works_for` edge to CompanyABC and his `boss_of` edge to Sarah.
+
+{{% expandable %}}
+
+```
+upsert {
+  query {
+    michael(func: eq(name, "Michael")) {
+      michael as uid
+    }
+    sarah(func: eq(name, "Sarah")) {
+      sarah as uid
+    }
+    companyabc(func: eq(name, "CompanyABC")) {
+      companyabc as uid
+    }
+  }
+
+  mutation {
+    delete {
+      uid(michael) <works_for> uid(companyabc) .
+      uid(michael) <boss_of> uid(sarah) .
+    }
+  }
+}
+```
+
+The `query` section binds each node's `uid` to a variable, and the `delete`
+block removes both edges in a single transaction — the same upsert pattern as
+the `set` block in schema/7, but with `delete` instead.
+
+{{% /expandable %}}
